# WslManager

./: .gitignore  Cargo.toml  LICENSE  README.md  app.rc  build.rs
.github/workflows/: rust.yml
src/: app.rs  i18n.rs  main.rs  monitor.rs  wsl.rs
